--- a/front/sass/header.scss
+++ b/front/sass/header.scss
@@ -1,14 +1,24 @@
+$phone: "(min-width: 300px) and (max-width: 420px)";
+
+.header{
+   transition: color 0.5s ease
+}
+
 .brand{
   position: absolute;
-  top: 20px;
+  top: 50px;
   font-family: 'Times New Roman';
   font-size: 60px;
   font-weight: 500;
   font-style: italic;
   margin: 0;
   display: inline;
-  color: white;
   z-index: 2;
+
+  @media #{$phone}{
+    font-size: 50px;
+    display: block
+  }
 }
 
 .header-message{
@@ -17,13 +27,17 @@
   }
   font-size: 12px;
   width: 50%;
-  margin-top: 7%;
+  margin-top: 120px;
+  @media #{$phone}{
+    width: 90%;
+  }
 }
 
 .header-right{
   p{
     margin: 0;
-    color: white;
+    margin-bottom: 5px;
+    cursor: pointer;
   }
   position: absolute;
   right: 5%;
@@ -31,28 +45,127 @@
   text-transform: uppercase;
   text-decoration: underline;
   font-size: 12px;
-  top: 20px;
+  top: 60px;
   float: right;
   z-index: 2;
+  @media #{$phone}{
+    position: relative;
+    right: 0;
+    float: none;
+    top: 0;
+    p{
+      display: inline-block;
+      margin-right: 5px;
+    }
+  }
 }
 
 .header-overlay-off{
   transition: top 0.5s ease;
-  height: 25%;
+  height: 270px;
   width: 100%;
   background-color: black;
   z-index: 1;
   position: absolute;
   left: 0;
-  top: -25%;
+  top: -272px;
 }
 .header-overlay-on{
   transition: top 0.5s ease;
-  height: 25%;
+  height: 272px;
   width: 100%;
   background-color: black;
   z-index: 1;
   position: absolute;
   left: 0;
   top: 0;
+}
+
+.header-input{
+  position: absolute;
+  right: 5%;
+  top: 130px;
+  z-index: 1;
+  width: 250px;
+  .submission{
+    input{
+      margin-top: 50px;
+    }
+  }
+  p{
+    margin: 0;
+    cursor: pointer;
+  }
+  input{
+    width: 250px;
+    font-size: 12px;
+    border-bottom: solid 5px white;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-bottom: 10px;
+    text-align: left;
+    background-color: transparent;
+    color: white;
+    display: block;
+  }
+  input[placeholder]{
+    color: white;
+  }
+  button{
+    position: relative;
+    z-index: 0;
+    border: 1px solid white ;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 5px 5px 5px 5px;
+  }
+}
+.header-close{
+  position: absolute;
+  top: -10px;
+  right: 20px;
+  color: white;
+  z-index: 1;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.subscribe{
+  margin-top: 50px;
+  input{
+    display: inline !important;
+    width: 250px;
+    font-size: 12px;
+    border-bottom: solid 5px black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-bottom: 10px;
+    text-align: left;
+    background-color: transparent;
+    color: black;
+    display: block;
+  }
+  input[placeholder]{
+    color: white;
+    text-transform: uppercase;
+  }
+  button{
+    position: relative;
+    z-index: 0;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    margin-left: 15px;
+    font-size: 12px;
+    text-transform: uppercase;
+    padding: 5px 5px 5px 5px;
+    @media #{$phone}{
+      margin-left: 0px;
+    }
+  }
+
 }
