--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -1,8 +1,12 @@
 body{
   font-family: 'Helvetica Neue', "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
   font-variant: normal;
   padding: 30px;
   margin: 0px;
+}
+
+textarea:focus, input:focus{
+    outline: none;
 }
