--- a/front/sass/notifications.scss
+++ b/front/sass/notifications.scss
@@ -18,15 +18,16 @@
 
 .notif {
   position      : relative;
-  font          : 1rem normal Helvetica, sans-serif;
+  font          : 1rem;
+  text-align: center;
   overflow      : hidden;
-  border-radius : 4px;
+  border-radius : 0px;
   margin-bottom : 2px;
   max-height    : 400px;
   box-sizing    : border-box;
   box-shadow    : 0 0 1px 1px rgba(10, 10, 11, .125);
   padding       : 0.5rem;
-  color         : #fff;
+  color         : #000;
 }
 
 .notif--success {
