--- a/front/sass/player.scss
+++ b/front/sass/player.scss
@@ -1,13 +1,94 @@
 .player{
-  display: none;
+  transition: bottom 0.5s ease;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 30px;
-  background-color: black
+  height: 50px;
+  background-color: black;
+  bottom: -50px;
 }
 
 .play-pause-button{
-  color: blue;
+  display: inline-block;
+  color: white;
+  padding: 10px;
+
+}
+
+.progressContainer{
+  display: none;
+  position: relative;
+  width: 60%;
+  background-color: #D9F3CA;
+
+  margin-left: 20%;
+  display: flex;
+  margin-top: -7px;
+  .progressFill{
+    background-color: black;
+    position: relative;
+    height: 100%;
+    width: 30%;
+  }
+}
+
+.progress-slider{
+  position: relative;
+  background: linear-gradient(to right, #ffffff 0%,#1e1e1e 0%,#1e1e1e 0%,#ffffff 0%,#1e1e1e 0%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  cursor: pointer;
+  height: 15px;
+  width: 60%;
+  margin-left: 20%;
+  display: flex;
+  margin-top: -35px;
+  .progress-slider-handle{
+    display: none;
+    background-color: white;
+    height: 10px;
+    width: 10px;
+  }
+}
+
+.currentTimeDiv{
+  color: white;
+  margin: 0;
+  display: block;
+  position: absolute;
+  top: 0;
+  width: 60%;
+  height: 10px;
+  margin-left: 20%;
+  p{
+    margin: 0;
+    display: inline-block;
+  }
+  p:first-child{
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    font-size: 14px;
+  }
+  p:last-child{
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    font-size: 14px;
+  }
+}
+.player:hover{
+  .currentTimeDiv{
+    p:first-child{
+      opacity: 1;
+      position: absolute;
+      left: 0;
+    }
+    p:last-child{
+      opacity: 1;
+      position: absolute;
+      right: 0;
+    }
+  }
 }
