--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -24,11 +24,11 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   margin-bottom: 60px;
 }
 .artist-name{
-
+  cursor: pointer
 }
 
 .song-title{
-
+  cursor: pointer;
 }
 
 .song-title-div{
