--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -24,7 +24,11 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   margin-bottom: 60px;
 }
 .artist-name{
-  cursor: pointer
+  cursor: pointer;
+  a{
+    text-decoration: none;
+    color: black
+  }
 }
 
 .song-title{
