--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -22,6 +22,14 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   align-items: flex-end;
   height: 150px;
   margin-bottom: 60px;
+  @media #{$phone}{
+    display: block;
+    width: 90%;
+    height: auto;
+    height: 200px;
+    margin-bottom: 200px;
+    margin-top: 100px;
+  }
 }
 .artist-name{
   cursor: pointer;
