--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -12,8 +12,8 @@ textarea:focus, input:focus{
 }
 
 a:visited{
-  color: black;
+  color: inherit;
 }
 a:link{
-  color: black;
+  color: inherit;
 }
