--- a/front/sass/profilePage.scss
+++ b/front/sass/profilePage.scss
@@ -35,3 +35,24 @@ profile-page{
     text-align: center;
   }
 }
+
+.settings-cog{
+  position: absolute;
+  right: 62px;
+}
+
+.user-settings{
+  height: 200px;
+  h1 {
+    font-family: 'Times New Roman';
+    font-style: italic;
+    text-align: center;
+    margin-top: 0px;
+  }
+  h3{
+    text-align: center;
+  }
+  .settings-soundcloud-fa{
+
+  }
+}
