--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -5,7 +5,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
 
 .track-group{
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   height: 150px;
   margin-bottom: 20px;
   @media #{$phone}{
@@ -45,7 +45,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
 
 .song-title-div{
   p:first-child{
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     @media #{$phone}{
       margin-bottom: 5px;
     }
@@ -53,9 +53,17 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   p{
     margin: 0;
   }
+  .soundcloud-like{
+    position: relative;
+    margin-top: 15px;
+    padding-left: 0px;
+    cursor: pointer;
+    color: #ff7700;
+  }
   padding-left: 40px;
   display: inline-block;
   width: 70%;
+  margin-top: 65px;
   @media #{$phone}{
     width: 100%;
     margin-top: 30px;
@@ -76,6 +84,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   text-align: right;
   width: 100px;
   font-size: 12px;
+  margin-top: 82px;
   @media #{$phone}{
     display: block;
     float: none;
