--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -92,6 +92,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
     width: 100%;
     right: 0;
     position: relative;
+    margin-top: 0px;
   }
 }
 
