--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -1,10 +1,21 @@
 body{
   font-family: 'Helvetica Neue', "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 300;
   font-style: normal;
   font-variant: normal;
   padding: 30px;
   margin: 0px;
+  h1, h2, h3, h4, h5, p{
+    span{
+      background-color: black
+    }
+  }
+  h1, h2, h3, h4, h5, p, a{
+    span{
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+  }
 }
 
 textarea:focus, input:focus{
