--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -12,8 +12,7 @@ body{
   }
   h1, h2, h3, h4, h5, p, a{
     span{
-      padding-left: 10px;
-      padding-right: 10px;
+      padding: 2px 10px 2px 10px;
     }
   }
 }
