--- a/front/sass/player.scss
+++ b/front/sass/player.scss
@@ -11,6 +11,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
   width: 100%;
   height: 50px;
   background-color: black;
+  opacity: 0.95;
   bottom: -50px;
 }
 
