--- a/front/sass/track.scss
+++ b/front/sass/track.scss
@@ -136,6 +136,7 @@ $phone: "(min-width: 300px) and (max-width: 420px)";
 .album-art-div{
   position: relative;
   background-color: red;
+  cursor: pointer;
   min-width: 150px;
   height: 125px;
   display: block;
