styling, copy to clipboard, pages fine tuned

--- a/front/sass/stream.scss
+++ b/front/sass/stream.scss
@@ -10,3 +10,11 @@
     margin-left: 20px;
   }
 }
+
+.stream-title {
+  font-family: 'Times New Roman';
+  font-style: italic;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 0px;
+}
