--- a/front/sass/header.scss
+++ b/front/sass/header.scss
@@ -5,6 +5,16 @@ $iPhone5: "(min-width: 300px) and (max-width: 320px)";
    transition: color 0.5s ease
 }
 
+.header-overlay-text {
+  h2 {
+    font-weight: 400;
+  }
+  @media #{$phone}{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
 .brand{
   position: absolute;
   top: 50px;
@@ -26,6 +36,7 @@ $iPhone5: "(min-width: 300px) and (max-width: 320px)";
   h2{
     font-weight: 400;
   }
+  transition: color 0.5s ease;
   font-size: 12px;
   width: 50%;
   margin-top: 120px;
